syntax = "proto3";
package orderdataservice;
import "modelcommon.proto";
import "order.proto";

option go_package="model";


message SubscribeToOrdersWithRootOriginatorIdArgs {
    string rootOriginatorId = 2;
}

message GetOrderHistoryArgs {
    string orderId = 1;
    int32 toVersion = 2;
}


message OrderUpdate {
     model.Order order =1;
     model.Timestamp time = 2;
}

message OrderHistory {
    repeated OrderUpdate updates =1;
}


service OrderDataService {
    rpc SubscribeToOrdersWithRootOriginatorId(SubscribeToOrdersWithRootOriginatorIdArgs) returns (stream model.Order) {};
    rpc GetOrderHistory(GetOrderHistoryArgs) returns (OrderHistory){};
}  
